k8s/network/repeater/istio.yaml
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: netflix-ui
spec:
  hosts:
  - netflix-ui.acme.com
  - netflix-ui
  gateways:
  - netflix-ui
  http:
  - route:
    - destination:
        host: netflix-ui
        subset: primary
        port:
          number: 80

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: netflix-ui
spec:
  host: netflix-ui
  subsets:
  - name: primary
    labels:
      release: primary

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: netflix-ui
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - netflix-ui.acme.com
